# tiralabra

./: .coveragerc  .gitignore  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
app/: file_service.py  huffman.py  huffman_suorituskyky.py  lz78.py  lz78_suorituskyky.py  tiedosto_palvelu.py
app/test/: jfk_virkaanastujaispuhe.txt
app/tests/: huffman_test.py  lz78_test.py  test.txt  tiedosto_palvelu_test.py
data/: jfk_virkaanastujaispuhe.txt  sia_cheap_thrills.txt  simple_test.txt
docs/viikkoraportit/: viikko1.md
dokumentaatio/: maarittelydokumentti.md  testaus_poetry.csv  testaus_py.csv  testausdokumentti.md  toteutusdokumentti.md  vertailu.csv
dokumentaatio/viikkoraportit/: viikko2.md  viikko3.md  viikko5.md  viikko6.md
