[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = "Tiedoston pakkausalgoritmien projekti Aineopintojen harjoitustyö: Tietorakenteet ja algoritmit -kurssille."
authors = ["Tuukka Laitinen <8557415+tuukkalai@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
